--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
       </footer>
     </div>
-    <script src="javascript.js"></script>
+    <script src="index.js"></script>
   </body>
   
 </html>
