--- a/index.html
+++ b/index.html
@@ -47,13 +47,25 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/KeneilweRuthNamelang" target="_blank"
+            >Keneilwe Ruth Namelang</a
+          >
+          and is
+          <a
+            href="https://github.com/KeneilweRuthNamelang/SheCodes-Week-6-Homework"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://keneilweshecodesweek6homework.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
     <script src="index.js"></script>
   </body>
-  
 </html>
